--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background_green">#47823d</color>
+    <color name="background_green">#47823D</color>
     <color name="button_background">#92A88F</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
