[UT-361] pequeños cambios

--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -12,16 +12,17 @@
         android:id="@+id/estadisticas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/varela_round"
         android:text="@string/estadistica"
         android:textColor="@color/white"
         android:textSize="34sp"
-        app:layout_constraintStart_toEndOf="@+id/volver"
+        app:layout_constraintStart_toEndOf="@+id/imageButton2"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/volver"
+        android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -41,11 +42,12 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="68dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_jugadas"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/volver" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
 
     <TextView
         android:id="@+id/numPreguntasAcertadas"
@@ -54,6 +56,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_preguntas_acertadas"
         android:textColor="@color/black"
@@ -67,6 +70,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="29dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_preguntas_incorrrectas"
         android:textColor="@color/black"
@@ -80,6 +84,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_ganadas"
         android:textColor="@color/black"
@@ -93,6 +98,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="29dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_perdidas"
         android:textColor="@color/black"
@@ -106,6 +112,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/tiempo_promedio"
         android:textColor="@color/black"
@@ -119,6 +126,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/tiempo_total"
         android:textColor="@color/black"
@@ -132,6 +140,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="31dp"
         android:background="@drawable/btn_shape_round"
+        android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/nivel_conocimiento_ODS"
         android:textColor="@color/black"
