--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="btn_corner_radius">10dp</dimen>
+    <dimen name="estadisticas">34sp</dimen>
+    <dimen name="estadisticas_datos">14sp</dimen>
+    <dimen name="estadisticas_datos_height">30dp</dimen>
+    <dimen name="estadisticas_datos_width">300dp</dimen>
 </resources>
