[UT-361] Mucha mierda, tuve problemas para conseguir hacer el binding, pero al final lo he conseguido

--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/background_green"
         android:contentDescription="@string/volver"
+        android:onClick="goToMainScreen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_revert"
@@ -39,13 +40,16 @@
         android:id="@+id/numPartidasJugadas"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_jugadas"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
 
@@ -53,13 +57,16 @@
         android:id="@+id/numPreguntasAcertadas"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_preguntas_acertadas"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiempoTotal" />
 
@@ -67,13 +74,16 @@
         android:id="@+id/numPreguntasIncorrectas"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_preguntas_incorrrectas"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numPreguntasAcertadas" />
 
@@ -81,13 +91,16 @@
         android:id="@+id/numPartidasGanadas"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_ganadas"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numPartidasJugadas" />
 
@@ -95,13 +108,16 @@
         android:id="@+id/numPartidasPerdidas"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_perdidas"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numPartidasGanadas" />
 
@@ -109,13 +125,16 @@
         android:id="@+id/numPartidasAbandonadas"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
+        android:layout_marginStart="44dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/num_partidas_abandonadas"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numPartidasPerdidas" />
 
@@ -123,13 +142,16 @@
         android:id="@+id/tiempoPromedio"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/tiempo_promedio"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numPartidasAbandonadas" />
 
@@ -137,13 +159,16 @@
         android:id="@+id/tiempoTotal"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/tiempo_total"
         android:textColor="@color/black"
+        android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiempoPromedio" />
 
@@ -151,14 +176,16 @@
         android:id="@+id/nivelConocimientoODS"
         android:layout_width="@dimen/estadisticas_datos_width"
         android:layout_height="@dimen/estadisticas_datos_height"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="47dp"
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/nivel_conocimiento_ODS"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numPreguntasIncorrectas" />
 
