[UT 385] Fragmentos de Preguntas

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="btn_corner_radius">10dp</dimen>
+    <dimen name="header_font_size">24sp</dimen>
+    <dimen name="header_margin_top">21dp</dimen>
+
 </resources>
