--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_green"
-    tools:context=".viewmodel.activity_questions">
+    android:background="@color/background_green">
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -25,11 +25,11 @@
         android:id="@+id/Reto_Preguntas"
         android:layout_width="216dp"
         android:layout_height="34dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="@dimen/header_margin_top"
         android:layout_marginEnd="86dp"
         android:text="@string/reto_preguntas"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/header_font_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextSizeCheck" />
@@ -52,120 +52,19 @@
             android:background="@color/background_white_green" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView3"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView6"
+        android:name="com.dds.theecogame.FragmentQuestions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="22dp"
-        android:text="@string/preguntanum"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
-
-    <TextView
-        android:id="@+id/TiempoRestante"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="39dp"
-        android:text="@string/tiempo_restante"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="290dp"
-        android:layout_height="111dp"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="59dp"
-        android:background="@color/background_white_green"
-        android:text="@string/pregunta"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="56dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="178dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="178dp"
-        android:contentDescription="@string/imagen"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:ignore="ImageContrastCheck"
-        tools:src="@tools:sample/avatars" />
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="320dp"
-        android:layout_height="293dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="39dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
-
-        <RadioButton
-            android:id="@+id/radioButton9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background_white_green"
-            android:text="@string/opcionA"
-            android:textColor="@color/black"
-            tools:ignore="DuplicateSpeakableTextCheck" />
-
-        <RadioButton
-            android:id="@+id/radioButton8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background_white_green"
-            android:text="@string/opcionB"
-            android:textColor="@color/black" />
-
-        <RadioButton
-            android:id="@+id/radioButton7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background_white_green"
-            android:text="@string/opcionC"
-            android:textColor="@color/black" />
-
-        <RadioButton
-            android:id="@+id/radioButton6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/background_white_green"
-            android:text="@string/opcionD"
-            android:textColor="@color/black" />
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/Continuar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="145dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginBottom="51dp"
-        android:backgroundTint="@color/background_white_green"
-        android:text="@string/continuar"
-        android:textColor="@color/black"
-        app:cornerRadius="15sp"
+        android:layout_marginStart="186dp"
+        android:layout_marginTop="331dp"
+        android:layout_marginEnd="225dp"
+        android:layout_marginBottom="400dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
