--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="title_top_margin">60dp</dimen>
     <dimen name="settings_slider_title_font_size">18sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="estadisticas">34sp</dimen>
+    <dimen name="estadisticas_datos">16.5sp</dimen>
+    <dimen name="estadisticas_datos_height">40dp</dimen>
+    <dimen name="estadisticas_datos_width">320dp</dimen>
 </resources>
