--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="btn_corner_radius">30dp</dimen>
+    <dimen name="btn_corner_radius">10dp</dimen>
+    <dimen name="header_font_size">24sp</dimen>
+    <dimen name="header_margin_top">21dp</dimen>
     <dimen name="title_font_size">48sp</dimen>
     <dimen name="title_top_margin">60dp</dimen>
     <dimen name="settings_slider_title_font_size">18sp</dimen>
