--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -45,7 +45,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.dds.theecogame.fragment_consolidate"
+        android:name="com.dds.theecogame.presentation.views.fragment_consolidate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="445dp"
