--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/varela_round"
-        android:text="@string/estadistica"
+        android:text="@string/statistics"
         android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintStart_toEndOf="@+id/imageButton2"
@@ -28,7 +28,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/background_green"
-        android:contentDescription="@string/volver"
+        android:contentDescription="@string/back"
         android:onClick="goToMainScreen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -46,7 +46,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/num_partidas_jugadas"
+        android:text="@string/num_games_played"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/num_preguntas_acertadas"
+        android:text="@string/num_correct_answers"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/num_preguntas_incorrrectas"
+        android:text="@string/num_wrong_answers"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/num_partidas_ganadas"
+        android:text="@string/num_games_won"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +114,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/num_partidas_perdidas"
+        android:text="@string/num_games_lost"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,7 +131,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/num_partidas_abandonadas"
+        android:text="@string/num_abandoned_answers"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +148,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/tiempo_promedio"
+        android:text="@string/mean_time"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -165,7 +165,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/tiempo_total"
+        android:text="@string/total_time"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
@@ -182,7 +182,7 @@
         android:background="@drawable/btn_shape_round"
         android:fontFamily="@font/varela_round"
         android:gravity="center_vertical|center_horizontal"
-        android:text="@string/nivel_conocimiento_ODS"
+        android:text="@string/ODS_knowledge"
         android:textColor="@color/black"
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
