--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="343dp"
         android:layout_marginBottom="6dp"
         android:backgroundTint="@color/background_green"
-        android:contentDescription="@string/volver"
+        android:contentDescription="@string/back"
         android:src="@android:drawable/ic_menu_revert"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
