--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="7dp"
         android:backgroundTint="@color/background_green"
-        android:contentDescription="@string/volver"
+        android:contentDescription="@string/back"
         android:src="@android:drawable/ic_menu_revert"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="34dp"
         android:layout_marginTop="@dimen/header_margin_top"
         android:layout_marginEnd="86dp"
-        android:text="@string/reto_preguntas"
+        android:text="@string/question_challenge"
         android:textColor="@color/white"
         android:textSize="@dimen/header_font_size"
         app:layout_constraintEnd_toEndOf="parent"
